Update displaying background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1>Smart Door Lock Control</h1>
+        <h1>Smart Home - Trung Kien</h1>
         
         <div class="status-section">
             <span class="status-label">Door Status:</span>
